--- a/src/app/component/template/footer/footer.component.css
+++ b/src/app/component/template/footer/footer.component.css
@@ -1,5 +1,5 @@
 .footer{
-    background-color:#322030 ;
+    background-color: #5c1319;
     /*posição fixa*/
     position: fixed;
     /*coloca toolbar na parte de baixa */
