--- a/src/app/component/template/header/header.component.html
+++ b/src/app/component/template/header/header.component.html
@@ -1,16 +1,12 @@
-<mat-toolbar class="header" color="primary" mat-elevation-z4>
+<mat-toolbar class="header" color="primary" mat-elevation-z4  >
 
-  <!-- Logo -->
-  <span class="logo-container">
-    <a routerLink="/">
-      <img class="logo" src="assets/img/logo-senai.png" alt="logo">
-    </a>
-  </span>
+  <!-- Nome da aplicação estilizado -->
+  <span class="brand-name" routerLink="/">Part<span>Stock</span></span>
 
-  <!-- Espaçador para empurrar o menu de navegação para a direita -->
+  <!-- Espaçador -->
   <span class="spacer"></span>
 
-  <!-- Menu de navegação movido para a direita -->
+  <!-- Menu de navegação -->
   <span class="nav-links">
     <a mat-button routerLink="/clientes"><i class="material-icons">info</i> Sobre</a>
   </span>
