--- a/src/app/component/paymentMethod/payment-method-read/payment-method-read.component.css
+++ b/src/app/component/paymentMethod/payment-method-read/payment-method-read.component.css
@@ -61,3 +61,13 @@ tr:nth-child(even) td {
 td {
   min-height: 48px;
 }
+
+
+.info-bar {
+  text-align: right;
+  font-size: 1rem;
+  font-weight: 600;
+  color: #A92727;
+  margin: 10px 0 15px 0;
+  padding-right: 10px;
+}
