--- a/src/app/component/product/product-read/product-read.component.html
+++ b/src/app/component/product/product-read/product-read.component.html
@@ -25,9 +25,14 @@
   </mat-form-field>
 </div>
 
+
+<div class="info-bar">
+  Quantidade de Produtos: <strong>{{ totalProdutosEstoque  }}</strong>
+</div>
 <!-- Container da tabela -->
 <div class="mat-elevation-z4">
   <table mat-table [dataSource]="products">
+
 
     <!-- Colunas da tabela -->
 
