--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,7 +1,7 @@
 <mat-card class="home mat-elevation-z3">
   <div class="card-content">
     <!-- Boas-vindas -->
-    <h2 class="welcome-message">Bem-vindo ao <span class="system-name">Sistema Auto-Peças</span></h2>
+    <h2 class="welcome-message">Bem-vindo ao <span class="system-name">Sistema-PartStock</span></h2>
 
     <!-- Espaço para imagem / logo -->
     <div class="image-container">
