--- a/src/app/component/product/product-update/product-update.component.html
+++ b/src/app/component/product/product-update/product-update.component.html
@@ -91,9 +91,9 @@
 <mat-form-field appearance="outline">
   <mat-label>Marca*</mat-label>
   <mat-select [(ngModel)]="selectedMarcaId" name="marca" required #marca="ngModel">
-    <mat-option *ngFor="let m of marcas" [value]="m.marId">
-      {{ m.marNome }}
-    </mat-option>
+  <mat-option *ngFor="let marca of marcas" [value]="marca.marId" [disabled]="!marca.marAtivo">
+  {{ marca.marNome }}
+</mat-option>
   </mat-select>
   <mat-error *ngIf="marca.invalid && marca.touched">
     Marca é obrigatória.
@@ -104,9 +104,9 @@
 <mat-form-field appearance="outline">
   <mat-label>Categoria*</mat-label>
   <mat-select [(ngModel)]="selectedCategoriaId" name="categoria" required #categoria="ngModel">
-    <mat-option *ngFor="let c of categorias" [value]="c.ctgId">
-      {{ c.ctgNome }}
-    </mat-option>
+  <mat-option *ngFor="let categoria of categorias" [value]="categoria.ctgId" [disabled]="!categoria.ctgAtivo">
+  {{ categoria.ctgNome }}
+</mat-option>
   </mat-select>
   <mat-error *ngIf="categoria.invalid && categoria.touched">
     Categoria é obrigatório.
