--- a/src/app/component/product/product-read/product-read.component.html
+++ b/src/app/component/product/product-read/product-read.component.html
@@ -76,6 +76,17 @@
       <td mat-cell *matCellDef="let row">{{ row.proAtivo ? 'Sim' : 'Não' }}</td>
     </ng-container>
 
+
+<ng-container matColumnDef="status">
+  <th mat-header-cell *matHeaderCellDef>Status</th>
+  <td mat-cell *matCellDef="let row">
+    <span *ngIf="!row.marca.marAtivo || !row.categoria.ctgAtivo" style="color:red; font-weight:bold;">
+      Marca ou Categoria Inativa!
+    </span>
+  </td>
+</ng-container>
+
+
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Ações</th>                    
       <td mat-cell *matCellDef="let row">
