--- a/src/app/component/template/nav/nav.component.html
+++ b/src/app/component/template/nav/nav.component.html
@@ -8,6 +8,11 @@
         <span>Início</span>
       </a>
 
+  <a mat-list-item routerLink="/vendas">
+        <i class="material-icons">shopping_cart </i>
+        <span>Vendas</span>
+      </a>
+
       <a mat-list-item routerLink="/clientes">
         <i class="material-icons">account_circle</i>
         <span>Clientes</span>
