--- a/src/app/component/paymentMethod/payment-method-create/payment-method-create.component.html
+++ b/src/app/component/paymentMethod/payment-method-create/payment-method-create.component.html
@@ -28,7 +28,7 @@
       <mat-error *ngIf="fpgPermiteParcelamento.invalid && fpgPermiteParcelamento.touched">Selecione uma opção</mat-error>
     </mat-form-field>
 
-   <mat-form-field appearance="outline">
+<mat-form-field appearance="outline">
   <mat-label>Máximo de Parcelas</mat-label>
   <input matInput
          type="number"
@@ -37,7 +37,8 @@
          required
          min="1"
          max="99"
-              (keypress)="apenasNumeros($event)"
+         [disabled]="!paymentMethod.fpgPermiteParcelamento"
+         (keypress)="apenasNumeros($event)"
          #fpgNumMaxParcelas="ngModel">
   <mat-error *ngIf="fpgNumMaxParcelas.invalid && fpgNumMaxParcelas.touched">
     Informe um número entre 1 e 99.
