--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -16,7 +16,7 @@
       <button class="btn-primary" routerLink="/vendas">Visualizar Vendas</button>
       <button class="btn-primary" routerLink="/products">Catálogo Produtos</button>
       <button class="btn-primary" routerLink="/suppliers">Lista Fornecedores</button>
-      <button class="btn-primary" routerLink="/fornecedores">Lista Funcionarios</button>
+      <button class="btn-primary" routerLink="/funcionarios">Lista Funcionarios</button>
     </div>
 
     
@@ -35,8 +35,8 @@
     <!-- Caixa de aviso para dados vinculados inativos -->
     <div class="alert-box">
       <h3>Atenção!</h3>
-      <p>Alguns dados vinculados estão inativos ou com problemas. Verifique os detalhes.</p>
-      <button class="btn-secondary" routerLink="/avisos">Ver Detalhes</button>
+      <p>Vendas Pendentes.</p>
+      <button class="btn-secondary" routerLink="/pendentes">Pendentes</button>
     </div>
 
     <!-- Botão Sobre -->
