--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -35,8 +35,8 @@
     <!-- Caixa de aviso para dados vinculados inativos -->
     <div class="alert-box">
       <h3>Atenção!</h3>
-      <p>Vendas Pendentes.</p>
-      <button class="btn-secondary" routerLink="/pendentes">Pendentes</button>
+      <p>{{ qtdPendentes }} venda(s) pendente(s)</p>
+      <button class="btn-secondary" routerLink="/pendentes">Ver Pendentes</button>
     </div>
 
     <!-- Botão Sobre -->
