--- a/src/app/component/paymentMethod/payment-method-update/payment-method-update.component.html
+++ b/src/app/component/paymentMethod/payment-method-update/payment-method-update.component.html
@@ -21,7 +21,7 @@
     <!-- Parcelamento -->
     <mat-form-field appearance="outline">
       <mat-label>Permitir Parcelamento?</mat-label>
-      <mat-select [(ngModel)]="paymentMethod.fpgPermiteParcelamento" name="fpgPermiteParcelamento" required #fpgPermiteParcelamento="ngModel">
+      <mat-select [(ngModel)]="paymentMethod.fpgPermiteParcelamento" name="fpgPermiteParcelamento" required #fpgPermiteParcelamento="ngModel" (selectionChange)="onPermiteParcelamentoChange()">
         <mat-option [value]="true">Sim</mat-option>
         <mat-option [value]="false">Não</mat-option>
       </mat-select>
@@ -29,23 +29,22 @@
     </mat-form-field>
 
     
-<mat-form-field appearance="outline">
-  <mat-label>Máximo de Parcelas</mat-label>
-  <input matInput
-         type="number"
-         [(ngModel)]="paymentMethod.fpgNumMaxParcelas"
-         name="fpgNumMaxParcelas"
-         required
-         min="1"
-         max="99"
-         [disabled]="!paymentMethod.fpgPermiteParcelamento"
-         (keypress)="apenasNumeros($event)"
-         #fpgNumMaxParcelas="ngModel">
-  <mat-error *ngIf="fpgNumMaxParcelas.invalid && fpgNumMaxParcelas.touched">
-    Informe um número entre 1 e 99.
-  </mat-error>
-</mat-form-field>
-
+    <mat-form-field appearance="outline">
+      <mat-label>Máximo de Parcelas</mat-label>
+      <input matInput
+             type="number"
+             [(ngModel)]="paymentMethod.fpgNumMaxParcelas"
+             name="fpgNumMaxParcelas"
+             required
+             min="1"
+             max="99"
+             [disabled]="!paymentMethod.fpgPermiteParcelamento"
+             (keypress)="apenasNumeros($event)"
+             #fpgNumMaxParcelas="ngModel">
+      <mat-error *ngIf="fpgNumMaxParcelas.invalid && fpgNumMaxParcelas.touched">
+        Informe um número entre 1 e 99.
+      </mat-error>
+    </mat-form-field>
 
     <!-- Taxa Adicional -->
     <mat-form-field appearance="outline">
