--- a/src/app/component/cargo/cargo-update/cargo-update.component.html
+++ b/src/app/component/cargo/cargo-update/cargo-update.component.html
@@ -23,8 +23,7 @@
              [(ngModel)]="cargo.carDescricao"
              name="carDescricao"
              #carDescricao="ngModel"
-             maxlength="200"
-            (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
+             maxlength="200">
     </mat-form-field>
 
       <mat-form-field appearance="outline">
