--- a/src/app/component/categoria/categoria-update/categoria-update.component.html
+++ b/src/app/component/categoria/categoria-update/categoria-update.component.html
@@ -23,8 +23,7 @@
              [(ngModel)]="categoria.ctgDescricao"
              name="ctgDescricao"
              #ctgDescricao="ngModel"
-             maxlength="200"
-   (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
+             maxlength="200">
     </mat-form-field>
 
       <mat-form-field appearance="outline">
