--- a/src/app/component/product/product-create/product-create.component.html
+++ b/src/app/component/product/product-create/product-create.component.html
@@ -36,8 +36,7 @@
     <!-- Descrição -->
     <mat-form-field appearance="outline">
       <mat-label>Descrição</mat-label>
-      <input matInput [(ngModel)]="product.proDescricao" name="proDescricao" maxlength="200"
-          (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
+      <input matInput [(ngModel)]="product.proDescricao" name="proDescricao" maxlength="200">
     </mat-form-field>
 
     <!-- Código de Barras -->
