--- a/src/app/component/venda/venda-delete/venda-delete.component.html
+++ b/src/app/component/venda/venda-delete/venda-delete.component.html
@@ -18,7 +18,7 @@
     <!-- Forma de Pagamento -->
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Forma de Pagamento</mat-label>
-      <input matInput [value]="venda.formaPagamento?.fpgDescricao" disabled>
+      <input matInput [value]="venda.formaPagamento?.fpgNome" disabled>
     </mat-form-field>
 
     <!-- Observação -->
