--- a/src/app/component/venda/venda-read/venda-read.component.html
+++ b/src/app/component/venda/venda-read/venda-read.component.html
@@ -52,7 +52,7 @@
     <!-- Forma de pagamento -->
     <ng-container matColumnDef="formaPagamento">
       <th mat-header-cell *matHeaderCellDef>Forma Pagamento</th>
-      <td mat-cell *matCellDef="let row">{{ row.formaPagamento?.fpgDescricao }}</td>
+      <td mat-cell *matCellDef="let row">{{ row.formaPagamento?.fpgNome }}</td>
     </ng-container>
 
 <!-- Data da venda -->
