--- a/src/app/component/paymentMethod/payment-method-read/payment-method-read.component.html
+++ b/src/app/component/paymentMethod/payment-method-read/payment-method-read.component.html
@@ -8,6 +8,11 @@
       <td mat-cell *matCellDef="let row">{{row.fpgId}}</td>
     </ng-container>
 
+ <!-- Description Column -->
+    <ng-container matColumnDef="fpgNome">
+      <th mat-header-cell *matHeaderCellDef>Nome</th>
+      <td mat-cell *matCellDef="let row">{{row.fpgNome}}</td>
+    </ng-container>
 
       <!-- Type Column -->
     <ng-container matColumnDef="fpgTipo">
