--- a/src/app/component/supplier/supplier-update/supplier-update.component.html
+++ b/src/app/component/supplier/supplier-update/supplier-update.component.html
@@ -165,6 +165,22 @@
       </mat-error>
     </mat-form-field>
 
+     <mat-card-title>Status</mat-card-title>
+
+      <mat-form-field appearance="outline">
+      <mat-label>Status do Fornecedor</mat-label>
+      <mat-select
+        [(ngModel)]="supplier.forAtivo"
+        name="forAtivo"
+        required
+        #forAtivo="ngModel">
+        <mat-option [value]="true">Ativo</mat-option>
+        <mat-option [value]="false">Inativo</mat-option>
+      </mat-select>
+      <mat-error *ngIf="forAtivo.invalid && forAtivo.touched">
+        Status é obrigatório.
+      </mat-error>
+    </mat-form-field>
     <!-- Botões -->
     <button mat-raised-button color="primary" type="submit">
       Atualizar
