--- a/src/app/component/product/product-create/product-create.component.html
+++ b/src/app/component/product/product-create/product-create.component.html
@@ -75,7 +75,7 @@
 <mat-form-field appearance="outline">
   <mat-label>Fornecedor</mat-label>
   <mat-select [(ngModel)]="product.fornecedor" name="fornecedor" required #fornecedorNgModel="ngModel">
-    <mat-option *ngFor="let fornecedor of fornecedores" [value]="fornecedor">
+    <mat-option *ngFor="let fornecedor of fornecedores" [value]="fornecedor"  [disabled]="!fornecedor.forAtivo">
       {{ fornecedor.forNomeFantasia }}
     </mat-option>
   </mat-select>
