--- a/src/app/component/product/product-read/product-read.component.html
+++ b/src/app/component/product/product-read/product-read.component.html
@@ -80,8 +80,8 @@
 <ng-container matColumnDef="status">
   <th mat-header-cell *matHeaderCellDef>Status</th>
   <td mat-cell *matCellDef="let row">
-    <span *ngIf="!row.marca.marAtivo || !row.categoria.ctgAtivo" style="color:red; font-weight:bold;">
-      Marca ou Categoria Inativa!
+    <span *ngIf="!row.marca.marAtivo || !row.categoria.ctgAtivo || !row.fornecedor.forAtivo" style="color:red; font-weight:bold;">
+      Marca ou Fornecedor ou Categoria Inativa!
     </span>
   </td>
 </ng-container>
