--- a/src/app/component/product/product-update/product-update.component.html
+++ b/src/app/component/product/product-update/product-update.component.html
@@ -115,7 +115,7 @@
 <mat-form-field appearance="outline">
   <mat-label>Fornecedor*</mat-label>
   <mat-select [(ngModel)]="selectedFornecedorId" name="fornecedor" required #fornecedor="ngModel">
-    <mat-option *ngFor="let f of fornecedores" [value]="f.forId">
+    <mat-option *ngFor="let f of fornecedores" [value]="f.forId" [disabled]="!f.forAtivo">
       {{ f.forRazaoSocial }}
     </mat-option>
   </mat-select>
