--- a/src/app/component/supplier/supplier-read/supplier-read.component.html
+++ b/src/app/component/supplier/supplier-read/supplier-read.component.html
@@ -15,6 +15,15 @@
     <input matInput (input)="onFilterChange('cnpj', $event)" placeholder="Cnpj">
   </mat-form-field>
 
+
+   <mat-form-field appearance="outline" class="search-bar">
+    <mat-label>Pesquisar Ativo</mat-label>
+    <mat-select (selectionChange)="onFilterChange('ativo', $event)" placeholder="Ativo">
+      <mat-option value="">Todos</mat-option>
+      <mat-option value="sim">Sim</mat-option>
+      <mat-option value="não">Não</mat-option>
+    </mat-select>
+  </mat-form-field>
 </div>
 
 
@@ -78,6 +87,12 @@
   </td>
 </ng-container>
  
+
+
+    <ng-container matColumnDef="forAtivo">
+      <th mat-header-cell *matHeaderCellDef>Ativo</th>
+      <td mat-cell *matCellDef="let row">{{ row.forAtivo ? 'Sim' : 'Não' }}</td>
+    </ng-container>
 
 
     <!-- Action Column -->
