--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -13,7 +13,7 @@
       <button class="btn-primary" routerLink="/vendas">Visualizar Vendas</button>
       <button class="btn-primary" routerLink="/products">Catálogo Produtos</button>
       <button class="btn-primary" routerLink="/suppliers">Lista Fornecedores</button>
-      <button class="btn-primary" routerLink="/funcionarios">Lista Funcionarios</button>
+      <button class="btn-primary" routerLink="/funcionarios">Lista Funcionários</button>
     </div>
 
     
