--- a/src/app/component/paymentMethod/payment-method-create/payment-method-create.component.html
+++ b/src/app/component/paymentMethod/payment-method-create/payment-method-create.component.html
@@ -30,7 +30,7 @@
     <!-- Parcelamento -->
     <mat-form-field appearance="outline">
       <mat-label>Permitir Parcelamento?</mat-label>
-      <mat-select [(ngModel)]="paymentMethod.fpgPermiteParcelamento" name="fpgPermiteParcelamento" required #fpgPermiteParcelamento="ngModel">
+      <mat-select [(ngModel)]="paymentMethod.fpgPermiteParcelamento" name="fpgPermiteParcelamento" required #fpgPermiteParcelamento="ngModel"   (selectionChange)="onPermiteParcelamentoChange()">
         <mat-option [value]="true">Sim</mat-option>
         <mat-option [value]="false">Não</mat-option>
       </mat-select>
@@ -45,12 +45,12 @@
          name="fpgNumMaxParcelas"
          required
          min="1"
-         max="99"
+         max="12"
          [disabled]="!paymentMethod.fpgPermiteParcelamento"
          (keypress)="apenasNumeros($event)"
          #fpgNumMaxParcelas="ngModel">
   <mat-error *ngIf="fpgNumMaxParcelas.invalid && fpgNumMaxParcelas.touched">
-    Informe um número entre 1 e 99.
+    Informe um número entre 1 e 12.
   </mat-error>
 </mat-form-field>
 
