--- a/src/app/component/funcionario/funcionario-read/funcionario-read.component.html
+++ b/src/app/component/funcionario/funcionario-read/funcionario-read.component.html
@@ -82,6 +82,18 @@
   </td>
 </ng-container>
 
+
+<!-- Status do Cargo -->
+<ng-container matColumnDef="status">
+  <th mat-header-cell *matHeaderCellDef>Status</th>
+  <td mat-cell *matCellDef="let row">
+    <span *ngIf="!isCargoAtivo(row.carId)" style="color:red; font-weight:bold;">
+      Cargo Inativo!
+    </span>
+  </td>
+</ng-container>
+
+
 <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef>Ações</th>
     <td mat-cell *matCellDef="let row">
