--- a/src/app/component/venda/venda-delete/venda-delete.component.html
+++ b/src/app/component/venda/venda-delete/venda-delete.component.html
@@ -6,19 +6,19 @@
     <!-- Cliente -->
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Cliente</mat-label>
-      <input matInput [value]="venda.cliente?.cliNome" disabled>
+      <input matInput [value]="venda.cliente.cliNome" disabled>
     </mat-form-field>
 
     <!-- Funcionário -->
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Funcionário</mat-label>
-      <input matInput [value]="venda.funcionario?.funNome" disabled>
+      <input matInput [value]="venda.funcionario.funNome" disabled>
     </mat-form-field>
 
     <!-- Forma de Pagamento -->
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Forma de Pagamento</mat-label>
-      <input matInput [value]="venda.formaPagamento?.fpgNome" disabled>
+      <input matInput [value]="venda.formaPagamento.fpgNome" disabled>
     </mat-form-field>
 
     <!-- Observação -->
