--- a/src/app/component/cargo/cargo-read/cargo-read.component.html
+++ b/src/app/component/cargo/cargo-read/cargo-read.component.html
@@ -1,5 +1,5 @@
-<div class="mat-elevation-z4">
-
+<div class="mat-elevation-z4 tabela-container">
+  <div class="tabela-scrollable">
   <table mat-table [dataSource]="cargos">
     
  
@@ -44,3 +44,4 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 </div>
+</div>  
