--- a/src/app/component/venda/venda-read/venda-read.component.css
+++ b/src/app/component/venda/venda-read/venda-read.component.css
@@ -119,3 +119,22 @@ input::placeholder {
   background-color: #2a2a38;
 }
 
+
+
+
+.tabela-scrollable table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.mat-header-row {
+  position: sticky;
+  top: 0;
+  background-color: #fff;
+  z-index: 1;
+} 
+
+.tabela-scrollable {
+  max-height: 500px; /* ou a altura desejada */
+  overflow-y: auto;
+}
