--- a/src/app/component/venda/venda-read/venda-read.component.html
+++ b/src/app/component/venda/venda-read/venda-read.component.html
@@ -34,7 +34,8 @@
 </div>
 
 <!-- Tabela de vendas -->
-<div class="mat-elevation-z4">
+<div class="mat-elevation-z4 tabela-container">
+  <div class="tabela-scrollable">
   <table mat-table [dataSource]="vendas" class="full-width-table" style="width: 100%;">
 
     <!-- Id da venda -->
