--- a/src/app/component/categoria/categoria-read/categoria-read.component.html
+++ b/src/app/component/categoria/categoria-read/categoria-read.component.html
@@ -1,5 +1,5 @@
-<div class="mat-elevation-z4">
-
+<div class="mat-elevation-z4 tabela-container">
+  <div class="tabela-scrollable">
   <table mat-table [dataSource]="categorias">
     
  
@@ -42,4 +42,5 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+</div>
 </div>
