--- a/src/app/component/cliente/cliente-read/cliente-read.component.html
+++ b/src/app/component/cliente/cliente-read/cliente-read.component.html
@@ -21,7 +21,8 @@
 
 
 
-<div class="mat-elevation-z4">
+<div class="mat-elevation-z4 tabela-container">
+  <div class="tabela-scrollable">
     <table mat-table [dataSource]="clientes">
 
 
