--- a/src/app/component/funcionario/funcionario-read/funcionario-read.component.html
+++ b/src/app/component/funcionario/funcionario-read/funcionario-read.component.html
@@ -24,7 +24,9 @@
   </mat-form-field>
 
 </div>
-<div class="mat-elevation-z4">
+
+<div class="mat-elevation-z4 tabela-container">
+  <div class="tabela-scrollable">
     <table mat-table [dataSource]="funcionarios">
 <ng-container matColumnDef="funId">
     <th mat-header-cell *matHeaderCellDef>Id</th>
