--- a/src/app/component/marca/marca-read/marca-read.component.html
+++ b/src/app/component/marca/marca-read/marca-read.component.html
@@ -1,5 +1,6 @@
-<div class="mat-elevation-z4">
 
+<div class="mat-elevation-z4 tabela-container">
+  <div class="tabela-scrollable">
   <table mat-table [dataSource]="marcas">
     
  
