--- a/src/app/component/paymentMethod/payment-method-read/payment-method-read.component.css
+++ b/src/app/component/paymentMethod/payment-method-read/payment-method-read.component.css
@@ -71,3 +71,22 @@ td {
   margin: 10px 0 15px 0;
   padding-right: 10px;
 }
+
+
+
+.tabela-scrollable {
+  max-height: 500px; /* ou a altura desejada */
+  overflow-y: auto;
+} 
+
+.tabela-scrollable table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.mat-header-row {
+  position: sticky;
+  top: 0;
+  background-color: #fff;
+  z-index: 1;
+} 
