--- a/src/app/component/pendente/pendente-read/pendente-read.component.css
+++ b/src/app/component/pendente/pendente-read/pendente-read.component.css
@@ -120,3 +120,21 @@
   }
   
   
+  
+
+.tabela-scrollable {
+  max-height: 500px; /* ou a altura desejada */
+  overflow-y: auto;
+} 
+
+.tabela-scrollable table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.mat-header-row {
+  position: sticky;
+  top: 0;
+  background-color: #fff;
+  z-index: 1;
+} 
