--- a/src/app/component/pendente/pendente-read/pendente-read.component.html
+++ b/src/app/component/pendente/pendente-read/pendente-read.component.html
@@ -25,7 +25,9 @@
   </div>
   
   <!-- Tabela de vendas pendentes -->
-  <div class="mat-elevation-z4">
+
+  <div class="mat-elevation-z4 tabela-container">
+    <div class="tabela-scrollable">
     <table mat-table [dataSource]="vendas" class="full-width-table" style="width: 100%;">
   
       <!-- Id da venda -->
