--- a/src/app/component/product/product-read/product-read.component.html
+++ b/src/app/component/product/product-read/product-read.component.html
@@ -29,8 +29,11 @@
 <div class="info-bar">
   Quantidade de Produtos: <strong>{{ totalProdutosEstoque  }}</strong>
 </div>
+
+
 <!-- Container da tabela -->
-<div class="mat-elevation-z4">
+<div class="mat-elevation-z4 tabela-container">
+  <div class="tabela-scrollable">
   <table mat-table [dataSource]="products">
 
 
@@ -81,7 +84,7 @@
   <th mat-header-cell *matHeaderCellDef>Status</th>
   <td mat-cell *matCellDef="let row">
     <span *ngIf="!row.marca.marAtivo || !row.categoria.ctgAtivo || !row.fornecedor.forAtivo" style="color:red; font-weight:bold;">
-      Marca ou Fornecedor ou Categoria Inativa!
+      Marca, Fornecedor ou Categoria está inativa!  
     </span>
   </td>
 </ng-container>
