--- a/src/app/component/supplier/supplier-read/supplier-read.component.html
+++ b/src/app/component/supplier/supplier-read/supplier-read.component.html
@@ -21,10 +21,10 @@
     <mat-select (selectionChange)="onFilterChange('ativo', $event)" placeholder="Ativo">
       <mat-option value="">Todos</mat-option>
       <mat-option value="sim">Sim</mat-option>
-      <mat-option value="não">Não</mat-option>
+      <mat-option value="não">Inativo</mat-option>
     </mat-select>
   </mat-form-field>
-</div>
+</div>  
 
 
 
@@ -32,9 +32,8 @@
 
 
 
-
-
-<div class="mat-elevation-z4">
+<div class="mat-elevation-z4 tabela-container">
+  <div class="tabela-scrollable">
   <table mat-table [dataSource]="suppliers">
     <!-- Id Column -->
     <ng-container matColumnDef="forId">
@@ -91,7 +90,7 @@
 
     <ng-container matColumnDef="forAtivo">
       <th mat-header-cell *matHeaderCellDef>Ativo</th>
-      <td mat-cell *matCellDef="let row">{{ row.forAtivo ? 'Sim' : 'Não' }}</td>
+      <td mat-cell *matCellDef="let row">{{ row.forAtivo ? 'Sim' : 'Inativo' }}</td>
     </ng-container>
 
 
@@ -111,4 +110,5 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+</div>
 </div>
